package com.vietravel.booking.domain.entity.auth;

public enum UserRole{
    CUSTOMER,STAFF,ADMIN
}
