package com.vietravel.booking.domain.entity.auth;

public enum UserStatus{
    PENDING,ACTIVE,LOCKED
}
