package com.vietravel.booking.domain.entity.booking;

public enum BookingStatus {
     PENDING,
     CONFIRMED,
     CANCEL_REQUESTED,
     CANCELED,
     COMPLETED
}
