package com.vietravel.booking.domain.entity.booking;

public enum PassengerType {
     ADULT,
     CHILD
}
