package com.vietravel.booking.domain.entity.booking;

public enum PaymentStatus {
     INIT,
     SUCCESS,
     FAILED,
     REFUNDED
}
