package com.vietravel.booking.domain.entity.booking;

public enum PaymentType {
     PAY,
     REFUND
}
