package com.vietravel.booking.domain.entity.content;

public enum NewsStatus {
     DRAFT,
     PUBLISHED,
     HIDDEN
}
