package com.vietravel.booking.domain.entity.support;

public enum NotificationType {
     INFO,
     SUCCESS,
     WARNING,
     ERROR
}
