package com.vietravel.booking.domain.entity.tour;

public enum DepartureStatus {
     OPEN,
     CLOSED
}
