package com.vietravel.booking.domain.entity.tour;

public enum DestinationType{
    COUNTRY,PROVINCE,CITY,ATTRACTION
}
